...
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_statistics_100dp" />

    <TextView
            android:id="@+id/no_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerInParent="true"
            android:layout_below="@id/no_statistics_placeholder"
            android:layout_marginTop="12dp"
            android:text="@string/no_statistics_available"/>

</RelativeLayout>

